<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:contentDescription="@string/content_description_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_store_interest"
        android:contentDescription="@string/content_description_store_interest"
        android:icon="@drawable/selector_favorite_24dp"
        android:title="@string/nav_store_interest" />

    <item
        android:id="@+id/nav_my"
        android:contentDescription="@string/content_description_my"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/nav_my" />

</menu>