<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.crayon.tablinghomework.domain.model.Restaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/gray"
            app:strokeWidth="0.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_thumbnail"
                    loadImageUrl="@{ item.thumbnail }"
                    android:layout_width="135dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/content_description_thumbnail"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:0.7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/default_image" />

                <TextView
                    android:id="@+id/tv_waiting_count"
                    isRemoteWaiting="@{ item.remoteWaiting }"
                    waitingCount="@{ item.waitingCount }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_top_right_round"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="대기 없음" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_view"
            app:layout_constraintTop_toTopOf="@id/card_view">

            <TextView
                android:id="@+id/tv_classification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{ item.classification }"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tv_restaurant_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="양식" />

            <TextView
                android:id="@+id/tv_restaurant_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{ item.restaurantName }"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/rating_review_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_classification"
                app:layout_constraintTop_toBottomOf="@id/tv_classification"
                tools:text="라보테" />

            <LinearLayout
                android:id="@+id/rating_review_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/button_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name">

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:contentDescription="@string/content_description_rating"
                    android:src="@drawable/ic_star_24dp" />

                <TextView
                    android:id="@+id/tv_rating"
                    rating="@{ item.rating }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="14sp"
                    tools:text="4.6" />

                <TextView
                    android:id="@+id/tv_review_count"
                    reviewCount="@{ item.reviewCount }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    tools:text="(300+)" />

                <TextView
                    android:id="@+id/tv_summary_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{ item.summaryAddress }"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    tools:text="신당동" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_review_layout">

                <TextView
                    android:id="@+id/tv_remote_waiting"
                    useView="@{ item.useWaiting }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    android:text="@string/text_remote_waiting"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_quick_booking"
                    useView="@{ item.useBooking }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    android:text="@string/text_quick_booking"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    tools:visibility="visible" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>